[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybirno"
version = "0.1.0"
description = "Async Python client for the BIR waste collection API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Sander Blom", email = "sander@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/SanderBlom/pybirno"
Repository = "https://github.com/SanderBlom/pybirno"
Issues = "https://github.com/SanderBlom/pybirno/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
