[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybirno"
dynamic = ["version"]
description = "Async Python client for the BIR waste collection API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Sander Blom", email = "sander@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/SanderBlom/pybirno"
Repository = "https://github.com/SanderBlom/pybirno"
Issues = "https://github.com/SanderBlom/pybirno/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "TRY003",  # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert usage is fine in tests
    "S105",    # hardcoded passwords are test fixtures
    "D100",    # missing docstring in public module
    "D103",    # missing docstring in public function
    "D104",    # missing docstring in public package
    "ANN",     # type annotations not required in tests
    "SLF001",  # private member access is fine in tests
    "PLR2004", # magic values are fine in tests
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that call the real BIR API (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.coverage.run]
source = ["pybirno"]

[tool.coverage.report]
fail_under = 90
show_missing = true
